fixed search patterns in bumpversion

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,5 +4,5 @@ commit = True
 tag = True
 
 [bumpversion:file:src/config.lua]
-search = VERSION: "{current_version}"
-replace = VERSIOn: "{new_version}"
+search = VERSION = "{current_version}"
+replace = VERSIOn = "{new_version}"
