--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,4 +5,4 @@ tag = True
 
 [bumpversion:file:src/config.lua]
 search = VERSION = "{current_version}"
-replace = VERSIOn = "{new_version}"
+replace = VERSION = "{new_version}"
