--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ luac.out
 *.x86_64
 *.hex
 
+# Ignore dist directory
+dist/
+
+# Please, ignore any .lua in the project root, but keep track of all the others:
+
+/*.lua
+!*/**.lua
